--- a/index.html
+++ b/index.html
@@ -1,87 +1,74 @@
-<<<<<<< HEAD
 <!DOCTYPE HTML> 
  
 <html> 
  
 <head> 
  
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />  
- <title> About Me </title>
-<link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
-<!-- Linking CSS -->  
-<link rel="stylesheet" type="text/css" href="assets/css/index.css"> 
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />  
+  <title> About Me </title>
+      <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
+      <link rel="stylesheet" type="text/css" href="assets/css/main.css"> 
+      <link rel="stylesheet" type="text/css" href="assets/css/index.css"> 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
-  </head>
+</head>
 
  
 <body> 
 <div id="body">
-<header class="header"> 
- <img src="http://publicdomainvectors.org/photos/ryanlerch_Glossy_Ibis_3.png" alt="ibis"> 
-  <h1>Mel DeJesus</h1>
 
-  <nav class="header"><form  action="file:///C:/Users/mel/git/Basic-Portfolio/index.html" method="get">
-  <button>About</button>
-</form>
-    <form style="display: inline-block"  action="file:///C:/Users/mel/git/Basic-Portfolio/portfolio.html" method="get">
-  <button>Portfolio</button>
-</form>
-    <form style="display: inline-block" action="file:///C:/Users/mel/git/Basic-Portfolio/contact.html" method="get">
-  <button>Contact</button>
-</form>
-  </nav>
-</header> 
+   <header class="header">
+      <img src="http://publicdomainvectors.org/photos/ryanlerch_Glossy_Ibis_3.png" alt="ibis">
+      <h1>Mel DeJesus</h1>
+
+        <nav class="nav-header">
+          <ul class="ul-header">
+            <li class="li-header"><a class="a-header" href="index.html"> <h3> About </h3> </li>
+           <li class="li-header"><a class="a-header" href="portfolio.html"> <h3> Portfolio </h3> </a> </li>
+           <li class="li-header"><a class="a-header" href="contact.html"> <h3> Contact </h3> </a> </li>
+          </ul>
+        </nav>
+  </header>
 
 <section>
   
  <article class="article"> 
-<header><h2>
-  About me</h2>
-  <hr>
-</header>
+    <header>
+      <h2>About me</h2>
+      <hr>
+    </header>
 
 <img id="article1" src="http://lorempixel.com/output/nightlife-q-g-640-480-3.jpg" alt="ibis"> 
-<p> I'm Mel DeJesus.  I live in Durham, NC.  As a youngster, I had a fondness for an early form of the BASIC computer language. </p><p> In a roundabout way, this led me through a brief stint in an Ohio engineering program before I switched to literature and philosophy, both of which I still have a deep affinity for.  </p><p>
+<p> I'm Mel DeJesus.  I live in Durham, NC.  As a youngster, I had a fondness for an early form of the BASIC computer language. </p><p> In a roundabout way, this led me briefly through an Ohio engineering program before switching to literature and philosophy, both of which I still have a deep affinity for.  </p><p>
 Later, I spent time teaching classes in writing and research at various NC colleges, exploring the ways that society and media inform, persuade and motivate us.  
-</p><p> This interest in the various kinds of landscapes that engage us led me to work as an outdoor guide at an eco-contemplative center, and I further explored this outdoor motif at a wildcrafting & outdoor school, where I facilitated its sales, operational, and communications strategies.  </p><p>
-At present, I've revisited my fascination with writing code, exploring various front-end web development and other forms of software.  Coding allows me to integrate many of my past interests while exploring new forms of expression.
+</p><p> Curious about other forms of landscape, I also spent time at an eco-contemplative center where I worked as an outdoor guide and at a wildcrafting & outdoor school where I facilitated its sales, operational, and communications strategies.  </p><p>
+Presently, I've returned to writing code, exploring software and front-end web development.  I appreciate the way coding allows me to integrate many of my past interests while exploring new forms of expression.
  </p>
+
 </article>
   
 <aside>
-<header class="aside">
-<h2>Links</h2> 
-  <hr>
-</header>
-<nav id="aside">
-  <!-- Github-->
-          <a href="https://github.com/edgewood1" ><i class="fa fa-github" aria-hidden="true"> </i> </a>
-    <!--Twitter-->
-         <a href="https://twitter.com/meldejesus007"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i> </a> </br> </br>
-    <!--Wordpress-->
-          <a href="https://meldejesus.wordpress.com/" ><i class="fa fa-wordpress fa-lg" aria-hidden="true"> </i>  </a>
-  <!--LinkedIn-->
-          <a href="https://www.linkedin.com/in/mel-dejesus-a5754056?trk=nav_responsive_tab_profile" ><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>  </a>
-  
-  <!--Flicker-->
- <a href="flicker.com"> 
- <i class="fa fa-flickr fa-md" aria-hidden="true"></i></a>
-  
-
-</nav>
-</aside> 
+       <header class="aside">
+            <h2> Links <h2> 
+       </header>
+       <hr>
+        <nav class="aside">
+          <ul>
+            <li><a href="https://github.com/edgewood1" target="_blank"><i class="fa fa-github" aria-hidden="true"> </i> </a> </li>
+            <li> <a href="https://twitter.com/meldejesus007" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"> </i> </a> </li> <br>
+            <li> <a href="https://meldejesus.wordpress.com/" target="_blank"><i class="fa fa-wordpress fa-md" aria-hidden="true"> </i> </a> </li>
+            <li> <a href="https://www.linkedin.com/in/mel-dejesus-a5754056?trk=nav_responsive_tab_profile"> <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i> </a> </li>
+            <li> <a href="flicker.com"><i class="fa fa-flickr fa-md" aria-hidden="true"> </i> </a> </li>
+          </ul>
+        </nav>
+      </aside>
   </section>
 
-<footer> 
-<p>Copyright 2016 Mel DeJesus</p> 
-</footer> 
+    <footer> 
+        <h4>Copyright 2016 Mel DeJesus</h4> 
+    </footer> 
   
-<script></script>
 </div>
 </body> 
 </html> 
-=======
-<p> hey stuart </p>
->>>>>>> ad721b64f19849254fd1a00a9b10c8fe6d3ffb4d
+
